# brt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yml  pypi_publish.yml
biorobot/: __init__.py
biorobot/brittle_star/: README.md
biorobot/brittle_star/environment/directed_locomotion/: dual.py  mjc_env.py  mjx_env.py  shared.py
biorobot/brittle_star/environment/light_escape/: dual.py  mjc_env.py  mjx_env.py  shared.py
biorobot/brittle_star/environment/shared/: base.py  mjc_observables.py  mjx_observables.py  observables.py
biorobot/brittle_star/environment/undirected_locomotion/: dual.py  mjc_env.py  mjx_env.py  shared.py
biorobot/brittle_star/mjcf/arena/: aquarium.py  target.py
biorobot/brittle_star/mjcf/morphology/: morphology.py
biorobot/brittle_star/tests/: main.py  rowing.py
biorobot/brittle_star/tests/mjcf/: AquariumArena.xml
biorobot/brittle_star/tests/mjcf_morph/: BrittleStarMorphology.xml
biorobot/brittle_star/usage_examples/: directed_locomotion_single.py  env_test.py  light_escape_single.py  light_escape_vectorized.py  undirected_locomotion_single.py
biorobot/jumping_spider/: README.md  usage_example.py
biorobot/jumping_spider/environment/: mjc_env.py  test.py
biorobot/jumping_spider/mjcf/: test.py
biorobot/jumping_spider/usage_examples/: directed_jump.py  directed_jump_rollout.py  long_jump.py  platform_jump.py
biorobot/toy_example/environment/: mjc_env.py  mjx_env.py
biorobot/utils/: colors.py  heightmap.py  noise.py  video.py
(+34 files in other folders)
